--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <strong>Baka Backups</strong><br>
             <div class="backup">
                 <h3>Baka V1</h3>
-                <a href="https://example.com/baka_v1.pkg"><button>Download PKG</button></a>
+                <a href="https://www.mediafire.com/folder/rby37ysphzaw4/BAKA+V1"><button>Download PKG</button></a>
                 <a href="#"><button>Download Archive</button></a>
                 <a href="https://example.com/baka_v1_showcase.html"><button>Showcase</button></a>
 
@@ -54,6 +54,16 @@
                 <button>Download PKG</button>
                 <button>Download Archive</button>
                 <button>Showcase</button>
+            </div>
+        </div>
+    </li>
+
+    <!-- Catégorie 4 -->
+    <li>
+        <div class="cat">
+            <strong>Kagura Backups</strong><br>
+            <div class="backup">
+                <a href="https://azeydev.github.io/Kagura-Website/download.html" class="button">Go to the Kagura website</a>
             </div>
         </div>
     </li>
